# PINN

./: .gitignore  FEM_dispersion.m  document.md  main.py  pyproject.toml
experiments/: FEM_dispersion.csv  PINN_dispersion.csv  PINN_three_layer_system.ipynb  disperion_gravity_sin.ipynb  dispersion_pinn.pth  head_1.ipynb  model_eval.ipynb  multilayer_pinn.ipynb  three_layer_pinn.pth  torsional_surface_wave.ipynb
src/: analytical.py  losses.py  model.py  pinn.py  pipeline.py
src1/: PINN.py  bc.py  model.py  note.md  params.py  pde_fgpm.py  pde_hydrogel.py  pde_substrate.py  sampler.py  utils.py
src2/: boundary_conditions.py  config.py  losses.py  networks.py  pde_residuals.py  sampling.py  train.py  utils.py
